k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustless-production
  labels:
    name: trustless-production
    environment: production
